mysql-service-latest.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mysql-service","namespace":"egs-touristguide"},"spec":{"clusterIP":"None","ports":[{"port":3306,"protocol":"TCP","targetPort":3306}],"selector":{"app":"mysql"}}}
  creationTimestamp: "2024-05-04T22:06:01Z"
  name: mysql-service
  namespace: egs-touristguide
  resourceVersion: "8286629"
  uid: 9a2f7f76-cb9b-46a5-95cb-36791b5baf03
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
