deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: egs-touristguide

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: egs-touristguide
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            - name: init-db-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim3
        - name: init-db-script
          configMap:
            name: mysql-init-db
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: egs-touristguide
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-app
  namespace: egs-touristguide
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-app
  template:
    metadata:
      labels:
        app: calendar-app
    spec:
      containers:
        - name: calendar-app
          image: registry.deti/egs-touristguide/calendar:v5
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: calendar-app-service
  namespace: egs-touristguide
spec:
  selector:
    app: calendar-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer




apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: touristguide-k3s
  namespace: egs-touristguide
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: touristguide
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calendar-app-service
            port:
              number: 3000
